--- a/ITIHub/posts/templates/viewReactions.html
+++ b/ITIHub/posts/templates/viewReactions.html
@@ -1,4 +1,37 @@
 {% extends 'base.html' %}
+{% block content %}
+<div class="container">
+    <h1 class="text-center">Reactions for "{{ post.title }}"</h1>
+    
+    {% if reactions %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>User</th>
+                    <th>Reaction</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for reaction in reactions %}
+                <tr>
+                    <td>{{ reaction.user.username }}</td>
+                    <td>{{ reaction.reaction_type }}</td>
+                    <td>{{ reaction.timestamp|date:"F d, Y H:i" }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p class="text-center text-muted">No reactions yet.</p>
+    {% endif %}
+
+    <a href="{% url 'post-list' %}" class="btn btn-secondary">Back to Posts</a>
+</div>
+{% endblock %} 
+
+
+{% comment %} {% extends 'base.html' %}
 
 {% block content %}
 <div class="container">
@@ -29,4 +62,4 @@
 
     <a href="{% url 'post-list' %}" class="btn btn-secondary">Back to Posts</a>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
